docs/config_examples/routes/sample-route-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: f5-demo-app-route-VirtualServer
    labels:
        name: f5-demo-app-route-VirtualServer
spec:
    type: ClusterIP
    ports:
        -
            port: 8080
            targetPort: 8080
    selector:
        app: f5-demo-app-route-VirtualServer
---
apiVersion: v1
kind: Service
metadata:
    name: f5-demo-app-route-balance
    labels:
        name: f5-demo-app-route-balance
spec:
    type: ClusterIP
    ports:
        -
            port: 8080
            targetPort: 8080
    selector:
        app: f5-demo-app-route-balance
---
apiVersion: v1
kind: Service
metadata:
    name: f5-demo-app-route-edge-ssl
    labels:
        name: f5-demo-app-route-edge-ssl
spec:
    type: ClusterIP
    ports:
        -
            port: 8080
            targetPort: 8080
    selector:
        app: f5-demo-app-route-edge-ssl
---
apiVersion: v1
kind: Service
metadata:
    name: f5-demo-app-route-reencrypt-ssl
    labels:
        name: f5-demo-app-route-reencrypt-ssl
spec:
    type: ClusterIP
    ports:
        -
            port: 443
            targetPort: 443
    selector:
        app: f5-demo-app-route-reencrypt-ssl
---
apiVersion: v1
kind: Service
metadata:
    name: f5-demo-app-route-passthrough-ssl
    labels:
        name: f5-demo-app-route-passthrough-ssl
spec:
    type: ClusterIP
    ports:
        -
            port: 443
            targetPort: 443
    selector:
        app: f5-demo-app-route-passthrough-ssl
---
apiVersion: v1
kind: Service
metadata:
    name: f5-demo-app-route-waf
    labels:
        name: f5-demo-app-route-waf
spec:
    type: ClusterIP
    ports:
        -
            port: 8080
            targetPort: 8080
    selector:
        app: f5-demo-app-route-waf
---
apiVersion: v1
kind: Service
metadata:
    name: f5-demo-app-route-edge-ssl-waf
    labels:
        name: f5-demo-app-route-edge-ssl-waf
spec:
    type: ClusterIP
    ports:
        -
            port: 8080
            targetPort: 8080
    selector:
        app: f5-demo-app-route-edge-ssl-waf
---
apiVersion: v1
kind: Service
metadata:
    name: svc1
    labels:
        name: svc1
spec:
    type: ClusterIP
    ports:
        -
            port: 443
            targetPort: 443
    selector:
        app: svc1
