docs/config_examples/routes/sample-passthrough-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: svc1
    f5type: systest
  name: svc1-route-passthrough
  annotations:
spec:
  host: svc1-passthrough-route.local
  port:
    targetPort: 443
  tls:
    termination: passthrough
  to:
    kind: Service
    name: svc1
