docs/config_examples/routes/sample-route-ab.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: f5-bg-route
    f5type: systest
  name: f5-demo-app-bg-route
  annotations:
    # Specify a supported BIG-IP load balancing mode
    virtual-server.f5.com/balance: least-connections-node
    virtual-server.f5.com/health: |
      [
        {
          "path": "mysite.f5demo.com/",
          "send": "HTTP GET /",
          "interval": 5,
          "timeout": 10
        }
      ]
spec:
  host: mysite.f5demo.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: f5-demo-app-route-balance
    weight: 20
  alternateBackends:
  - kind: Service
    name: f5-demo-app-route-basic
    weight: 10
