docs/config_examples/routes/sample-route-balance.yaml
  apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      name: f5-route-balance
      f5type: systest
    name: f5-demo-app-route-balance
    annotations:
      # Specify a supported BIG-IP load balancing mode
      # Change from the default balance to least-connections-node
      # health monitoring
      virtual-server.f5.com/balance: least-connections-node
      virtual-server.f5.com/health: |
        [
          {
            "path": "mysite2.f5demo.com/",
            "send": "HTTP GET /",
            "interval": 5,
            "timeout": 10
          }
        ]
  spec:
    host: mysite2.f5demo.com
    path: "/"
    port:
      targetPort: 8080
    to:
      kind: Service
      name: f5-demo-app-route-balance
