docs/config_examples/routes/sample-route-waf.yaml
  apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      name: f5-route-waf
      f5type: systest
    name: f5-demo-app-route-waf
    annotations:
      # annotations
      # health monitoring
      # Please add a path for the waf policy until fixed
      virtual-server.f5.com/waf: /Common/WAF_Policy1
      virtual-server.f5.com/health: |
        [
          {
            "path": "mysite5.f5demo.com/",
            "send": "HTTP GET /",
            "interval": 5,
            "timeout": 10
          }
        ]
  spec:
    host: mysite5.f5demo.com
    path: "/"
    port:
      targetPort: 8080
    to:
      kind: Service
      name: f5-demo-app-route-waf
