docs/config_examples/routes/sample-unsecured-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: svc1
    f5type: systest
  name: svc1-route-unsecured
  annotations:
spec:
  host: svc1-route.local
  path: "/test"
  port:
    targetPort: 80
  to:
    kind: Service
    name: svc1
